app/assets/stylesheets/_reviewer.scss
@import 'uswds/lib/addons/font-stacks';
@import 'uswds/core/variables';
@import 'font-awesome-sprockets';
@import 'font-awesome';

$caseflow-background: #f9f9f9;
$bookmark-blue: #23abf6;
$bookmark-orange: #f6a623;
$bookmark-white: #ffffff;
$bookmark-white-outline: #5b616b;
$bookmark-pink: #f772e7;
$bookmark-green: #3fcd65;
$bookmark-yellow: #efdf1a;

.cf-nav-full-screen {
  padding: 10px 30px;

  .usa-grid-full {
    max-width: none;
  }

  .cf-nav-dropdown {
    right: 30px;
  }
}

.cf-pdf-page-container {
  position: absolute;
  top: 50px;
  bottom: 0;
  right: 0;
  left: 0;
  min-height: 400px;
}

.cf-pdf-container {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 380px;
  left: 0;
}

.cf-pdf-scroll-view {
  background-color: $color-gray;
  width: 100%;
  top: 0;
  bottom: 0;
  position: absolute;
  overflow-y: scroll;
  overflow-x: visible;
  text-align: center;
  padding: 30px 0;
  float: left;
}

.cf-pdf-page {
  margin: 20px 0;
  width: 100%;
}

.annotationLayer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

// TODO: Get rid of the rule in caseflow commons that makes
// this necessary!
// scss-lint:disable QualifyingElement
svg[aria-hidden=true],
.fa[aria-hidden=true] {
  display: inline !important;
}
// scss-lint:enable QualifyingElement

.cf-sidebar-wrapper {
  display: flex;
  flex-direction: column;
  width: 380px;
  top: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  text-align: left;
  background: $caseflow-background;
  border-top: 1px solid $color-gray-lighter;
}

.cf-sidebar-header {
  padding-left: 20px;
  margin-bottom: 10px;
  height: 50px;
  background-color: $color-gray-warm-light;
  line-height: 50px;
  color: $color-gray-dark;
}

.cf-document-info-wrapper {
  padding: 0 30px;
}

.cf-comment-wrapper {
  padding: 0 30px;
  width: 380px;
  overflow-y: scroll;
}

.cf-pdf-toolbar {
  background: $color-gray-dark;
  width: 100%;
  height: 50px;
  color: $color-white;
  font-size: 15px;
  max-width: 100%;
}

.cf-pdf-header {
  position: absolute;
  z-index: 15;
  opacity: 1;
  padding: 15px 20px;
}

.cf-pdf-footer {
  position: absolute;
  z-index: 15;
  opacity: 1;
  bottom: 0;
  padding: 0 20px;
  line-height: 50px;
}

.cf-comment-cursor {
  cursor: copy;
}

.cf-pdf-buttons {
  &-left {
    text-align: left;
  }

  &-right {
    text-align: right;
  }

  &-center {
    text-align: center;
  }
}

.cf-pdf-bookmarks {
  transform: scale(1.5, 2);
}

// TODO: Remove !important
[type="button"].cf-pdf-button {
  margin: 0 8px !important;
  color: inherit;
  padding: 0;
  background-color: transparent;
  font-size: inherit;
  pointer-events: all;

  &:hover {
    text-decoration: none;
    background-color: transparent;
    color: $color-focus;
  }

  &:focus {
    box-shadow: none;
  }
}

[type="button"].cf-pdf-spaced-buttons {
  padding: 0 15px;
}

.cf-pdf-edit-comment {
  float: right;
  position: relative;
  margin-right: -30px;
  overflow: visible;
}

.cf-pdf-edit-comment-icon {
  color: $color-primary;
  border: 2px solid $color-primary;
  border-radius: 3px;
  margin: auto;
  padding: 10px;
  background-color: $color-white;

  &:hover {
    box-shadow: 1px 1px 5px 0 $color-gray;
  }
}

.cf-heading-comments {
  border-bottom: 1px solid $color-gray-lighter;
  padding-bottom: 12px;
  margin-top: 30px;
  font-size: 13px;
  font-weight: 400;
  line-height: 17px;
  text-transform: uppercase;
}

.cf-add-comment-button {
  margin-top: -15px;
}

.cf-pdf-meta-title {
  margin: 0;
}

.cf-full-page-app {
  width: 100%;
}

.pdfViewer.singlePageView .page {
  box-shadow: 0 0 5px $color-gray-dark;
  margin: 5px;
  border-image: none;
  z-index: 5;
}

.cf-label {
  opacity: .3;
}

.cf-selected-label {
  opacity: 1;
}

.cf-pdf-comment-indicator {
  margin-left: 10px;
  font-size: 12px;
}

.cf-pdf-navigation {
  position: absolute;
  bottom: 50%;
  z-index: 20;
  pointer-events: none;
  left: 15px;
  right: 15px;
}

.cf-pdf-bookmark-decisions {
  color: $bookmark-blue;
}

.cf-pdf-bookmark-veteran-submitted {
  color: $bookmark-orange;
}

.cf-pdf-bookmark-procedural {
  color: $bookmark-white;
  position: relative;
}

// This is to give the white bookmark a gray outline
.cf-pdf-bookmark-procedural::after {
  // This is the unicode for the fa-bookmark-o icon
  content: '\f097';
  color: $bookmark-white-outline;
  position: absolute;
  left: 0;
}

.cf-pdf-bookmark-va-medial {
  color: $bookmark-pink;
}

.cf-pdf-bookmark-layperson {
  color: $bookmark-green;
}

.cf-pdf-bookmark-private-medical {
  color: $bookmark-yellow;
}

.cf-pdf-pdfjs-container {
  display: inline-block;
  position: relative;
}

.cf-document-category-picker {
  list-style-type: none;
  padding-left: 0;
  padding-bottom: 5px;

  .cf-category-selector {
    display: flex;
    align-items: flex-start;
    margin-bottom: 1.5rem;

    .cf-category-name {
      line-height: 1;
      padding-left: 7px;
    }
  }
}

// Use this class when you want the grid to start at the 1/3 point.
//    <empty> <content .cf-pull-right-one-third> <content>
.cf-pull-right-one-third {
  // This is a one-third width from .usa-width-one-third +
  //   the margin-right from .usa-width-one-third
  margin-left: 34.11921734%;
}

.cf-document-category-icons {
  list-style-type: none;
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  float: left;

  li {
    float: left;
  }

  li:not(:first-child) {
    padding-left: 10px;
  }
}

.cf-pdf-pdfjs-textLayer {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  opacity: 0.2;
  line-height: 1;
}

.cf-pdf-annotationLayer {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

